html taken from index file

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <main>
         <section class="container bg-main hero">
             <div class="row-short">
-                <img class="logo" src="./img/logo.png" alt="Logo">
+                <img class="logo" src="./img/logo2.png" alt="Logo">
                 <h1 class="main-title" >Coming soon</h1>
                 <p class="main-description" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vitae. Accusamus deleniti quam officia nemo fugiat hic voluptates libero eaque!</p>
                 <div class="clock">
